# szenergy-utility-programs

./: .gitignore  README.md  ray_ground_euclidean_cluster.yaml
bag_scripts/: README.md  convertgpsdata.py  gpshistogram.py  plotgpsandimu.ipynb  rosbagcamandlidar.m  rosbagdisplay.m  rosbaginfo.sh  rosbaginfobagpy.py  rosbaginfoimagedisplay.py  rosbagxyvp.m  transformrewirte.py
bag_scripts/.ipynb_checkpoints/: plotgpsandimu-checkpoint.ipynb
configs/: CMakeLists.txt  README.md  package.xml
configs/plotjuggler/: 16_gps_compare_ros_stream.xml
configs/rviz/: 14leaf_demo1.rviz  14leaf_ouster.rviz
drivemode_sound/: CMakeLists.txt  README.md  package.xml
drivemode_sound/launch/: sounds.launch
gps_quick_compare/: CMakeLists.txt  README.md  package.xml
gps_quick_compare/src/: gps_quick_compare_node.cpp
gps_tf_publisher/: CMakeLists.txt  package.xml
gps_tf_publisher/launch/: gps.tf.map.launch  gps.tf.world.launch
gps_tf_publisher/src/: gps_tf_publisher.cpp  gps_tf_publisher.ndt.cpp  gps_tf_publisher_abstract.cpp
gui_ssh/: .gitignore  CMakeLists.txt  README.md  csvreader.py  jsonreader.py  main.py  openscreens.py  package.xml  requirements.txt
gui_ssh/ReadFiles/: buttons.json  leaf_buttons.json  lexus_buttons.json  userdata.json
gui_ssh/config/: leaf.yaml  lexus.yaml  (+1 more)
jsk_hud/: CMakeLists.txt  package.xml
marathon_waypoint/: CMakeLists.txt  README.md  package.xml
pcd_transform/: CMakeLists.txt  README.md  package.xml
ros_cmdl/: CMakeLists.txt  README.md  package.xml
ros_guis/: CMakeLists.txt  README.md  package.xml
rviz_map_publisher/: CMakeLists.txt  README.md  map_campus_gyor01.osm  osm_utm_matplotlib.py  package.xml
udp_joystick_ros/: CMakeLists.txt  README.md  package.xml
(+71 files in other folders)
